feat: Add BookingInfo and AdminHome pages
- Implemented BookingInfo page to display booking details.
- Created AdminHome page with a welcome message for admin users.
- Updated Home page to handle user roles and navigation.
- Removed deprecated home_page.dart file.
- Added WorkerHome page for worker-specific functionalities.
- Enhanced LoginBloc to load worker data and handle login states.
- Introduced LoadWorkerData event and corresponding states.
- Updated splash screen to manage user login status.
- Added location picker functionality with a modal bottom sheet.
- Integrated image compression and upload services.
- Updated pubspec.yaml and pubspec.lock with new dependencies.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -405,5 +405,11 @@
 "issueMedia":"محتوى المشكلة",
 "loadingVideo":"تحميل الفيديو",
 "categoryAlreadyExists":"القسم موجود بالفعل",
+"errorLoadingDistricts":"خطأ في تحميل المناطق",
+"noLocationsAvailable":"لا يوجد مواقع متاحة",
+"close":"اغلاق",
+"enterPasswordToConfirm":"أدخل كلمة المرور للتأكيد",
+"deleteAccountWarning":"هل أنت متأكد أنك تريد حذف حسابك؟ هذا الإجراء لا يمكن التراجع عنه",
+"logoutConfirmation":"هل أنت متأكد أنك تريد تسجيل الخروج؟",
 "notifications": "الاشعارات"
 }
