feat: Add service and tips tiles for admin management
- Implemented ServiceTileDevWidget for displaying service details with image, name, description, and price.
- Created TipsTileCompact for displaying tipping information with agent details and tip amount.
- Introduced ManageApp screen to navigate between different management functionalities (categories, services, banners, agents, tips).
- Updated Home screen to include ManageApp navigation for admin users.
- Enhanced WorkerHome screen with notifications functionality.
- Refactored Splash screen to handle user login state with Bloc for better state management.
- Added new methods in AppServices for fetching user notifications and streaming categories, services, highlighted services, and banners.
- Updated dependencies in pubspec.yaml for dio, url_launcher, and video_player packages.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -411,5 +411,10 @@
 "enterPasswordToConfirm":"أدخل كلمة المرور للتأكيد",
 "deleteAccountWarning":"هل أنت متأكد أنك تريد حذف حسابك؟ هذا الإجراء لا يمكن التراجع عنه",
 "logoutConfirmation":"هل أنت متأكد أنك تريد تسجيل الخروج؟",
+"customerName":"اسم العميل",
+"call":"اتصال",
+"directions":"اتجاهات",
+"images":"صور",
+"video":"فيديو",
 "notifications": "الاشعارات"
 }
