feat: Add functionality to manage agent approvals and wallet clearing
- Introduced ClearTipWalletEvent and ApproveRejectAgentEvent in manage_app_event.dart for handling wallet clearing and agent approval actions.
- Enhanced ManageAppState with new states for wallet clearing and agent approval processes.
- Updated AddNewCategories and EditServices pages to support image picking and cropping, along with form validation for category and service management.
- Implemented a bottom sheet for displaying tip details and confirming wallet clearing actions.
- Added methods in AppServices for clearing tipping amounts and approving/rejecting agents.
- Improved UI components for agent and category management, including confirmation dialogs for agent approval.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -416,5 +416,6 @@
 "directions":"اتجاهات",
 "images":"صور",
 "video":"فيديو",
+"walletClearedSuccessfully":"تم مسح المحفظة بنجاح",
 "notifications": "الاشعارات"
 }
