--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -405,5 +405,6 @@
   "directions":"Directions",
   "images":"Images",
   "video":"Video",
+  "walletClearedSuccessfully":"Wallet cleared successfully",
   "failedToSendNotification": "Failed to send notification to customer"
 }
