feat: Enhance localization and biometric authentication features
- Updated ManageAgents, ManageBanners, AddNewCategories, ManageCategories, and BannerTile to utilize AppLocalizations for better internationalization.
- Improved error handling and user feedback with localized messages in various components.
- Implemented biometric authentication in the LoginPage for enhanced security.
- Created a new BiometricService to manage biometric authentication logic.
- Added AssignWorker sheet for assigning workers to bookings with location filtering.
- Updated pubspec.yaml and pubspec.lock to include local_auth package for biometric functionality.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -417,5 +417,33 @@
 "images":"صور",
 "video":"فيديو",
 "walletClearedSuccessfully":"تم مسح المحفظة بنجاح",
+"biometricNotSupported":"البيوميتريك غير مدعوم",
+"pleaseAuthenticateToContinue":"يرجى التحقق من حسابك للمتابعة",
+"authenticationFailed":"فشل التحقق",
+"biometricNotAvailable":"البيوميتريك غير متوفر",
+"biometricTemporarilyLocked":"البيوميتريك مقفل مؤقتا",
+"unexpectedErrorOccurred":"حدث خطأ غير متوقع",
+"ago":"منذ",
+"personalInformation":"معلومات شخصية",
+"country":"دولة",
+"languageCode":"كود اللغة",
+"accountStatus":"حالة الحساب",
+"adminStatus":"حالة الادمن",
+"verified":"موثق",
+"systemInformation":"معلومات النظام",
+"userId":"معرف المستخدم",
+"updatedAt":"تم التحديث في",
+"admin":"ادمن",
+"assignedRoles":"الوظائف المعينة",
+"noAgentsFound":"لم يتم العثور على وكلاء",
+"agentApproved":"وكيل موافق",
+"agentDisapproved":"وكيل غير موافق",
+"deleteBanner":"حذف البانر",
+"invalidImageUrl":"رابط صورة غير صحيح",
+"imageLoadError":"خطأ في تحميل الصورة",
+"imageCropError":"خطأ في تقسيم الصورة",
+"errorAddingCategory":"خطأ في إضافة القسم",
+"errorUpdatingCategory":"خطأ في تحديث القسم",
+"assign":"تعيين",
 "notifications": "الاشعارات"
 }
