--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -406,5 +406,33 @@
   "images":"Images",
   "video":"Video",
   "walletClearedSuccessfully":"Wallet cleared successfully",
+  "biometricNotSupported":"Biometric not supported",
+  "pleaseAuthenticateToContinue":"Please authenticate to continue",
+  "authenticationFailed":"Authentication failed",
+  "biometricNotAvailable":"Biometric not available",
+  "biometricTemporarilyLocked":"Biometric temporarily locked",
+  "unexpectedErrorOccurred":"Unexpected error occurred",
+  "ago":"Ago",
+  "personalInformation":"Personal Information",
+  "country":"Country",
+  "languageCode"  :"Language Code",
+  "accountStatus":"Account Status",
+  "adminStatus":"Admin Status",
+  "verified":"Verified",
+  "systemInformation":"System Information",
+  "userId":"User ID",
+  "updatedAt":"Updated At",
+  "admin":"Admin",
+  "assignedRoles":"Assigned Roles",
+  "noAgentsFound":"No agents found",
+  "agentApproved":"Agent Approved",
+  "agentDisapproved":"Agent Disapproved",
+  "deleteBanner":"Delete Banner",
+  "invalidImageUrl":"Invalid Image URL",
+  "imageLoadError":"Image load error",
+  "imageCropError":"Image crop error",
+  "errorAddingCategory":"Error adding category",
+  "errorUpdatingCategory":"Error updating category",
+  "assign":"Assign",
   "failedToSendNotification": "Failed to send notification to customer"
 }
