Refactor service management pages and enhance functionality
- Updated HighlightedServices to navigate to AddHighlightedServices for editing.
- Renamed EditServices to AddServicesDevPage and refactored its implementation.
- Improved loading of categories and locations in AddServicesDevPage.
- Enhanced form validation and image upload handling in AddServicesDevPage.
- Updated ManageServices to use AddServicesDevPage for adding new services.
- Adjusted ServiceTileDevWidget to navigate to AddServicesDevPage for editing services.
- Removed unnecessary image compression logic in UploadToFireStorage.
- Fixed location selection logic in AssignWorker to use location names instead of IDs.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -458,5 +458,6 @@
 "waitingForTechnicianToStartService":"انتظار وكيل الخدمة لبدء الخدمة",
 "waitingForAcceptance":"انتظار الموافقة",
 "waitingForServiceProviderResponse":"انتظار وكيل الخدمة",
+"orderRejected":"تم رفض الطلب",
 "notifications": "الاشعارات"
 }
