feat: Implement user signup functionality with image upload and location selection
- Refactored Signup page to use StatefulWidget for better state management.
- Added image picking and cropping functionality for profile and document images.
- Integrated location detection using Geolocator and Geocoding packages.
- Implemented job role selection with a bottom sheet for better user experience.
- Added validation for email and phone number during signup.
- Enhanced error handling and user feedback through SnackBars.
- Updated AppServices to include email registration check.
- Modified AuthServices to handle user registration and error messages.
- Added new dependencies for geolocation and background tasks in pubspec.yaml.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -459,5 +459,7 @@
 "waitingForAcceptance":"انتظار الموافقة",
 "waitingForServiceProviderResponse":"انتظار وكيل الخدمة",
 "orderRejected":"تم رفض الطلب",
+"registrationSuccess":"تم التسجيل بنجاح",
+"registrationFailed":"فشل التسجيل",
 "notifications": "الاشعارات"
 }
