feat: Add Firebase configuration and update Android/iOS settings
- Added .firebaserc for Firebase project configuration.
- Updated Android NDK version in build.gradle.kts.
- Modified AndroidManifest.xml to include tools namespace and replace application label.
- Enhanced firebase.json with functions configuration and improved formatting.
- Removed ESLint configuration file from functions directory.
- Adjusted error handling in notifyAgentOnAssignment function to use agent's lanCode directly.
- Cleaned up package.json by removing lint script.
- Updated Podfile.lock to include new dependencies: background_fetch, geocoding_ios, geolocator_apple, and package_info_plus.
- Refined Xcode project settings by removing unnecessary input/output paths.
- Added new localization strings for service creation and update failures in Arabic and English.
- Updated localization classes to include new strings for confirmation dialogs.
- Enhanced edit_profile.dart to pass additional worker data.
- Improved booking_controllers.dart with confirmation dialogs for tracking actions.
- Refactored admin_home.dart to include reject confirmation dialog and improved user filtering.
- Updated edit_services.dart to handle service creation and update errors more gracefully.
- Cleaned up login.dart by enabling debug mode for testing credentials.
- Refactored app_services.dart to streamline service fetching from Firestore.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -68,6 +68,8 @@
   "noServicesSelected": "لم يتم اختيار خدمات",
   "failedToLoadCategories": "فشل في تحميل الفئات",
   "failedToSaveService": "فشل في حفظ الخدمة",
+  "failedToCreateService": "فشل في إنشاء الخدمة",
+  "failedToUpdateService": "فشل في تحديث الخدمة",
   "pleaseVerifyYourIqama": "يرجى التحقق من الإقامة الخاصة بك من خلال تحديد مربع التأكيد",
   "uploadYourIqama": "رفع الإقامة الخاصة بك",
   "locationPermissionsAreDenied": "تم رفض أذونات الموقع",
@@ -461,5 +463,7 @@
 "orderRejected":"تم رفض الطلب",
 "registrationSuccess":"تم التسجيل بنجاح",
 "registrationFailed":"فشل التسجيل",
+"confirmReject":"تأكيد الرفض",
+"confirmRejectMessage":"هل أنت متأكد أنك تريد رفض هذا الطلب؟",
 "notifications": "الاشعارات"
 }
