feat: Update booking management features
- Added BookingBloc for handling booking cancellation and completion.
- Implemented CancelBooking and CompleteBooking events with corresponding states.
- Integrated booking cancellation and completion logic in AppServices.
- Updated BookingControlsWidget to use Bloc for managing booking actions.
- Added new localization strings for booking actions in Arabic and English.
- Removed unused loading states and refactored the UI for better user experience.
- Added language selection feature in the login page.
- Updated login logic to save credentials based on remember me functionality.
- Replaced deprecated image assets with new PNG files for launcher icons.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -465,5 +465,11 @@
 "registrationFailed":"فشل التسجيل",
 "confirmReject":"تأكيد الرفض",
 "confirmRejectMessage":"هل أنت متأكد أنك تريد رفض هذا الطلب؟",
+"bookingCancelledSuccessfully":"تم إلغاء الحجز بنجاح",
+"workMarkedAsComplete":"تم تعيين العمل كمكتمل",
+"areYouSureYouWantToStartTrackingThisBooking":"هل أنت متأكد أنك تريد بدء تتبع هذا الحجز؟",
+"areYouSureYouWantToStopTrackingThisBooking":"هل أنت متأكد أنك تريد إيقاف تتبع هذا الحجز؟",
+"areYouSureYouWantToCompleteThisWork":"هل أنت متأكد أنك تريد إنجاز هذا العمل؟",
+"useBiometric":"استخدام البيوميتريك",
 "notifications": "الاشعارات"
 }
