--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -460,5 +460,9 @@
   "areYouSureYouWantToStopTrackingThisBooking":"Are you sure you want to stop tracking this booking?",
   "areYouSureYouWantToCompleteThisWork":"Are you sure you want to complete this work?",
   "useBiometric":"Use Biometric",
+  "imageIsRequired":"Image is required",
+  "bookingCompletedSuccessfully":"Booking completed successfully",
+  "startedWorkingOnBookingSuccessfully":"Started working on booking successfully",
+  "stopTrackingBookingSuccessfully":"Stop tracking booking successfully",
   "failedToSendNotification": "Failed to send notification to customer"
 }
