feat: Enhance user experience with improved location tracking and error handling
- Refactored user stream management in admin home to cache users and reduce unnecessary rebuilds.
- Added phone call functionality in agent info with a floating action button for easy access.
- Introduced a button in home page to navigate to login screen.
- Implemented user data refresh logic in login bloc to ensure up-to-date information.
- Enhanced error handling in signup process with user-friendly messages.
- Improved location services with better permission handling and user notifications.
- Updated UI components for better localization support in various sheets.
- Bumped version to 1.0.12+12 for new features and improvements.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -3,7 +3,71 @@
   "appLoginCaption": "التطبيق للعثور على محترفين مؤهلين.",
   "mobileNumber": "رقم الهاتف ",
   "byContinuingYouAgreeToOur": "من خلال المتابعة، فإنك توافق علينا ",
-  "termsOfUseAndPrivacyPolicy": "شروط الاستخدام وسياسة الخصوصية",
+  "termsOfUseAndPrivacyPolicy": "شروط الاستخ ", 
+  "emailNotRegistered": "البريد الالكتروني غير مسجل",
+  "invalidEmailFormat": "صيغة البريد الالكتروني غير صحيحة",
+  "tooManyRequests": "عدد كبير جدا من الطلبات",
+  "networkError": "خطأ في الشبكة",
+  "wrongPassword": "كلمة المرور خاطئة",
+  "userNotFound": "المستخدم غير موجود",
+  "userDisabled": "حساب المستخدم معطل",
+  "deletingAccount": "جاري حذف الحساب...",
+  "requiresRecentLogin": "تتطلب هذه العملية مصادقة حديثة. يرجى تسجيل الخروج وتسجيل الدخول مرة أخرى.",
+  "resetPasswordError": "خطأ في استعادة كلمة المرور",
+  "incorrectPassword": "كلمة المرور غير صحيحة",
+  "accountDisabled": "الحساب معطل",
+  "invalidCredentials": "بيانات الدخول غير صحيحة",
+  "loginError": "خطأ في تسجيل الدخول",
+  "passwordMustBeAtleast6Characters": "يجب ان تكون كلمة المرور على الاقل 6 احرف",
+  "rememberMe": "تذكرني",
+  "manageOrders": "إدارة الطلبات",
+  "areYouSureYouWantToCompleteThisBooking": "هل أنت متأكد أنك تريد إنجاز هذا الحجز؟",
+  "locationPermissionPermanentlyDeniedPleaseEnable": "تم رفض إذن الموقع بشكل دائم. يرجى تمكين الوصول إلى الموقع من الإعدادات.",
+  "locationServicesDisabledCannotRestoreTracking": "تم تعطيل خدمات الموقع، لا يمكن استعادة التتبع",
+  "locationPermissionDeniedCannotRestoreTracking": "تم رفض إذن الموقع، لا يمكن استعادة التتبع",
+  "iosLocationPermissionErrorDuringRestore": "خطأ في إذن الموقع على iOS أثناء الاستعادة - قد تحتاج إذن \"دائماً\"",
+  "locationTrackingRestoredSuccessfully": "تم استعادة تتبع الموقع بنجاح",
+  "iosLocationPermissionIssueDuringRestore": "مشكلة في إذن الموقع على iOS أثناء الاستعادة",
+  "iosOnlyWhenInUsePermissionGranted": "iOS: تم منح إذن \"عند الاستخدام\" فقط. التتبع في الخلفية سيكون محدوداً.",
+  "iosAlwaysPermissionGranted": "iOS: تم منح إذن \"دائماً\". التتبع الكامل في الخلفية متاح.",
+  "iosErrorRequestingAlwaysPermission": "iOS: خطأ في طلب إذن \"دائماً\"",
+  "iosContinuingWithWhenInUsePermissionOnly": "iOS: المتابعة مع إذن \"عند الاستخدام\" فقط.",
+  "batteryOptimizationEnabledMayAffectTracking": "تحسين البطارية مفعل، قد يؤثر على تتبع الموقع في الخلفية",
+  "trackingYourLocationForServiceDelivery": "تتبع موقعك لتسليم الخدمة",
+  "aboGlumboLocationTracking": "أبو جلمبو - تتبع الموقع",
+  "backgroundLocationUpdated": "تم تحديث الموقع في الخلفية",
+  "errorUpdatingBackgroundLocation": "خطأ في تحديث الموقع في الخلفية",
+  "backgroundFetchTriggered": "تم تشغيل الجلب في الخلفية",
+  "backgroundFetchTimeout": "انتهت مهلة الجلب في الخلفية",
+  "locationStreamErrorDuringRestore": "خطأ في تدفق الموقع أثناء الاستعادة",
+  "errorRestoringLocationTracking": "خطأ في استعادة تتبع الموقع",
+  "backgroundFetchConfiguredAndStarted": "تم تكوين وبدء الجلب في الخلفية",
+  "errorConfiguringBackgroundFetch": "خطأ في تكوين الجلب في الخلفية",
+  "locationUpdated": "تم تحديث الموقع",
+  "errorUpdatingLocationToFirestore": "خطأ في تحديث الموقع إلى Firestore",
+  "errorStoppingBackgroundFetch": "خطأ في إيقاف الجلب في الخلفية",
+  "errorUpdatingBookingStatus": "خطأ في تحديث حالة الحجز",
+  "locationTrackingStopped": "تم إيقاف تتبع الموقع",
+  "errorCheckingBatteryOptimization": "خطأ في فحص تحسين البطارية",
+  "startedWorkingOnBookingSuccessfully":"بدء العمل على الحجز بنجاح",
+  "stopTrackingBookingSuccessfully":"إيقاف تتبع الحجز بنجاح",
+  "goToLogin":"الذهاب إلى تسجيل الدخول",
+  "locationPermissionErrorIOS": "خطأ في أذونات الموقع على iOS. يرجى الذهاب إلى الإعدادات > الخصوصية والأمان > خدمات الموقع > أبو جلمبو العامل واختيار 'دائماً' لتفعيل التتبع في الخلفية.",
+  "youHaveAnActiveBookingAlready": "لديك حجز نشط بالفعل.",
+  "locationServicesDisabledPleaseEnable": "تم تعطيل خدمات الموقع. يرجى تفعيل خدمات الموقع.",
+  "backgroundLocationPermissionRequired": "مطلوب إذن موقع الخلفية. يرجى اختيار 'السماح في كل الأوقات' للوصول إلى الموقع.",
+  "locationPermissionDeniedPleaseGrant": "تم رفض إذن الموقع. يرجى منح إذن الموقع للمتابعة.",
+  "locationPermissionPermanentlyDeniedPleaseEnable": "تم رفض إذن الموقع نهائياً. يرجى تفعيل الوصول إلى الموقع في الإعدادات.",
+  "userNotFound": "المستخدم غير موجود",
+  "userDisabled": "حساب المستخدم معطل",
+  "deletingAccount": "جاري حذف الحساب...",
+  "requiresRecentLogin": "تتطلب هذه العملية مصادقة حديثة. يرجى تسجيل الخروج وتسجيل الدخول مرة أخرى.",
+  "resetPasswordError": "خطأ في استعادة كلمة المرور",
+  "incorrectPassword": "كلمة المرور غير صحيحة",
+  "accountDisabled": "الحساب معطل",
+  "invalidCredentials": "بيانات الدخول غير صحيحة",
+  "loginError": "خطأ في تسجيل الدخول",
+  "passwordMustBeAtleast6Characters": "يجب ان تكون كلمة المرور على الاقل 6 احرف الخصوصية",
   "rememberMe": "تذكرني",
   "manageOrders": "إدارة الطلبات",
   "failedToGetAddress": "فشل الحصول على العنوان",
@@ -475,5 +539,15 @@
 "bookingCompletedSuccessfully":"تم إنجاز الحجز بنجاح",
 "startedWorkingOnBookingSuccessfully":"بدء العمل على الحجز بنجاح",
 "stopTrackingBookingSuccessfully":"إيقاف تتبع الحجز بنجاح",
+"goToLogin":"الذهاب إلى تسجيل الدخول",
+"failedToSendNotification": "فشل في إرسال الإشعار للعميل",
+  "failedToSendNotification": "فشل في إرسال الإشعار إلى العميل",
+  "locationPermissionErrorIOS": "حدث خطأ في إذن الموقع على نظام iOS. يرجى الذهاب إلى الإعدادات > الخصوصية والأمان > خدمات الموقع > Abo Glumbo Worker واختيار 'دائمًا' لتمكين التتبع في الخلفية.",
+  "youHaveAnActiveBookingAlready": "لديك حجز نشط بالفعل.",
+  "locationServicesDisabledPleaseEnable": "تم تعطيل خدمات الموقع. يرجى تمكين خدمات الموقع.",
+  "backgroundLocationPermissionRequired": "مطلوب إذن الموقع في الخلفية. يرجى اختيار 'السماح طوال الوقت' للوصول إلى الموقع.",
+  "locationPermissionDeniedPleaseGrant": "تم رفض إذن الموقع. يرجى منح إذن الموقع للمتابعة.",
+  "locationPermissionPermanentlyDeniedPleaseEnable": "تم رفض إذن الموقع بشكل دائم. يرجى تمكين الوصول إلى الموقع من الإعدادات.",
+  "areYouSureYouWantToCompleteThisBooking": "هل أنت متأكد أنك تريد إنجاز هذا الحجز؟",
 "notifications": "الاشعارات"
 }
