--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -220,6 +220,11 @@
   "invalidEmailFormat": "Invalid Email Format",
   "tooManyRequests": "Too many requests",
   "networkError": "Network Error",
+  "wrongPassword": "Wrong password",
+  "userNotFound": "User not found",
+  "userDisabled": "User account disabled",
+  "deletingAccount": "Deleting account...",
+  "requiresRecentLogin": "This operation requires recent authentication. Please log out and log back in.",
   "resetPasswordError": "Reset Password Error",
   "incorrectPassword": "Incorrect Password",
   "accountDisabled": "Account Disabled",
@@ -464,5 +469,40 @@
   "bookingCompletedSuccessfully":"Booking completed successfully",
   "startedWorkingOnBookingSuccessfully":"Started working on booking successfully",
   "stopTrackingBookingSuccessfully":"Stop tracking booking successfully",
-  "failedToSendNotification": "Failed to send notification to customer"
+  "cards":"Cards",
+  "goToLogin":"Go to Login",
+  "failedToSendNotification": "Failed to send notification to customer",
+  "locationPermissionErrorIOS": "Location permission error on iOS. Please go to Settings > Privacy & Security > Location Services > Abo Glumbo Worker and select 'Always' to enable background tracking.",
+  "youHaveAnActiveBookingAlready": "You have an active booking already.",
+  "locationServicesDisabledPleaseEnable": "Location services disabled. Please enable location services.",
+  "backgroundLocationPermissionRequired": "Background location permission required. Please select 'Allow all the time' for location access.",
+  "locationPermissionDeniedPleaseGrant": "Location permission denied. Please grant location permission to continue.",
+  "areYouSureYouWantToCompleteThisBooking": "Are you sure you want to complete this booking?",
+  "locationPermissionPermanentlyDeniedPleaseEnable": "Location permission permanently denied. Please enable location access in Settings.",
+  "locationServicesDisabledCannotRestoreTracking": "Location services disabled, cannot restore tracking",
+  "locationPermissionDeniedCannotRestoreTracking": "Location permission denied, cannot restore tracking",
+  "iosLocationPermissionErrorDuringRestore": "iOS location permission error during restore - may need \"Always\" permission",
+  "locationTrackingRestoredSuccessfully": "Location tracking restored successfully",
+  "iosLocationPermissionIssueDuringRestore": "iOS location permission issue during restore",
+  "iosOnlyWhenInUsePermissionGranted": "iOS: Only 'When In Use' permission granted. Background tracking will be limited.",
+  "iosAlwaysPermissionGranted": "iOS: 'Always' permission granted. Full background tracking available.",
+  "iosErrorRequestingAlwaysPermission": "iOS: Error requesting always permission",
+  "iosContinuingWithWhenInUsePermissionOnly": "iOS: Continuing with 'When In Use' permission only.",
+  "batteryOptimizationEnabledMayAffectTracking": "Battery optimization is enabled, may affect background location",
+  "trackingYourLocationForServiceDelivery": "Tracking your location for service delivery",
+  "aboGlumboLocationTracking": "Abo Glumbo - Location Tracking",
+  "backgroundLocationUpdated": "Background location updated",
+  "errorUpdatingBackgroundLocation": "Error updating background location",
+  "backgroundFetchTriggered": "Background fetch triggered",
+  "backgroundFetchTimeout": "Background fetch timeout",
+  "locationStreamErrorDuringRestore": "Location stream error during restore",
+  "errorRestoringLocationTracking": "Error restoring location tracking",
+  "backgroundFetchConfiguredAndStarted": "Background fetch configured and started",
+  "errorConfiguringBackgroundFetch": "Error configuring background fetch",
+  "locationUpdated": "Location updated",
+  "errorUpdatingLocationToFirestore": "Error updating location to Firestore",
+  "errorStoppingBackgroundFetch": "Error stopping background fetch",
+  "errorUpdatingBookingStatus": "Error updating booking status",
+  "locationTrackingStopped": "Location tracking stopped",
+  "errorCheckingBatteryOptimization": "Error checking battery optimization"
 }
