feat: Refactor signup flow to navigate directly to login page upon user deletion
feat: Add LanguageSelectorCard widget for language selection in the app

feat: Enhance splash screen with animations and improved UI elements

feat: Update AppServices to manage FCM tokens and user roles effectively

refactor: Improve location tracking service with better permission handling and background updates

chore: Bump version to 1.0.13+13

chore: Add untranslated.json for future localization support

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -12,6 +12,8 @@
   "userNotFound": "المستخدم غير موجود",
   "userDisabled": "حساب المستخدم معطل",
   "deletingAccount": "جاري حذف الحساب...",
+  "checkingAvailability": "فحص توفر الوكلاء...",
+  "loadingAgents": "جاري تحميل الوكلاء...",
   "requiresRecentLogin": "تتطلب هذه العملية مصادقة حديثة. يرجى تسجيل الخروج وتسجيل الدخول مرة أخرى.",
   "resetPasswordError": "خطأ في استعادة كلمة المرور",
   "incorrectPassword": "كلمة المرور غير صحيحة",
@@ -320,6 +322,7 @@
   "completedAt": "مكتمل في",
   "phone": "رقم الهاتف",
   "card": "بطاقة",
+  "cards": "البطاقات",
   "applePay": "Apple Pay",
   "cashOnHands": "الدفع عند الحصول",
   "ext": "الامتداد البريدي",
@@ -436,7 +439,7 @@
 "pleaseEnableLocationService" : "الرجاء تفعيل خدمة الموقع",
 "ok" : "حسنا",
 "locationPermissionDenied" : "تم رفض إذن الموقع",
-"bioMetricAuthentication" : "التحقق بواسطة البيوميتريك",
+"bioMetricAuthentication" : "تفعيل البصمة",
 "confirmDeletion" : "تأكيد الحذف",
 "accountDeleted" : "تم حذف الحساب",
 "pleaseWaitAccountVerification" : "الحساب يتم التحقق به من قبل الادارة، يرجى التحقق من حالة الحساب الخاص بك",
@@ -541,6 +544,7 @@
 "stopTrackingBookingSuccessfully":"إيقاف تتبع الحجز بنجاح",
 "goToLogin":"الذهاب إلى تسجيل الدخول",
 "failedToSendNotification": "فشل في إرسال الإشعار للعميل",
+    "goToLogin":"الذهاب إلى تسجيل الدخول",
   "failedToSendNotification": "فشل في إرسال الإشعار إلى العميل",
   "locationPermissionErrorIOS": "حدث خطأ في إذن الموقع على نظام iOS. يرجى الذهاب إلى الإعدادات > الخصوصية والأمان > خدمات الموقع > Abo Glumbo Worker واختيار 'دائمًا' لتمكين التتبع في الخلفية.",
   "youHaveAnActiveBookingAlready": "لديك حجز نشط بالفعل.",
@@ -549,5 +553,45 @@
   "locationPermissionDeniedPleaseGrant": "تم رفض إذن الموقع. يرجى منح إذن الموقع للمتابعة.",
   "locationPermissionPermanentlyDeniedPleaseEnable": "تم رفض إذن الموقع بشكل دائم. يرجى تمكين الوصول إلى الموقع من الإعدادات.",
   "areYouSureYouWantToCompleteThisBooking": "هل أنت متأكد أنك تريد إنجاز هذا الحجز؟",
-"notifications": "الاشعارات"
+  "deleteItemConfirmation": "هل أنت متأكد أنك تريد حذف هذا العنصر؟",
+  "agentUnavailable":"الوكيل غير متاح",
+  "timeConflictDetected":"تم تنسيق الوقت",
+  "cannotAssignWorkTo":"لا يمكن تعيين العمل ل",
+  "alreadyAssignedAtExactSameTime":"تم تعيينه بالفعل في نفس الوقت",
+  "currentBookingTime":"وقت الحجز الحالي",
+  "workerCannotBeAssignedMultipleTimes":"لا يمكن تعيين العامل لأكثر من حجز في نفس الوقت. يرجى اختيار وقت مختلف أو اختيار عامل آخر.",
+  "unknownWorker":"عامل غير معروف",
+  "workerCancelled":"تم إلغاء العامل",
+  "cancelledByWorker":"تم الغاء من قبل العامل",
+  "workerPreviouslyCancelled":"العامل ألغى سابقاً",
+  "agentCancelledAtTimeSlot":"الوكيل ألغى في هذا الوقت من قبل",
+  "previouslyCancelledAt":"تم الإلغاء سابقاً في",
+  "chooseDifferentAgent":"اختر وكيل مختلف",
+  "assignAnyway":"تعيين على أي حال",
+  "cancelledAt":"تم الإلغاء في",
+  "workerCancelledAtTime":"هذا الوكيل ألغى حجزاً سابقاً في نفس هذا التوقيت. فكر في تعيين وكيل مختلف للحصول على موثوقية أفضل.",
+  "notifications": "الاشعارات",
+  "workerRestrictedTitle":"العامل محظور",
+  "cannotAssignCancelledWorker":"لا يمكن تعيين عامل ألغى من قبل",
+  "lastCancellationOn":"آخر إلغاء في",
+  "workerCancelledRestrictionMessage":"هذا الوكيل ألغى حجزاً سابقاً وهو الآن محظور من التكليفات الجديدة. يرجى اختيار وكيل مختلف.",
+  "understood":"فهمت",
+  "cancelledThisBooking":"ألغى هذا الحجز",
+  "alreadyBookedAt": "محجوز بالفعل في",
+  "bookingAssignedTo": "تم تعيين الحجز إلى",
+  "bookingAssignmentSuccessful": "تم تعيين الحجز بنجاح",
+  "anotherAssignmentInProgress": "يوجد تعيين آخر قيد التقدم. يرجى الانتظار...",
+  "assignmentInProgress": "التعيين قيد التقدم. يرجى الانتظار...",
+  "checkingAvailabilityAndAssigning": "فحص التوفر والتعيين...",
+  "thisBookingAlreadyAssignedToAnotherAgent": "تم بالفعل تعيين هذا الحجز لوكيل آخر.",
+  "failedToAssignAgent": "فشل في تعيين الوكيل. يرجى المحاولة مرة أخرى.",
+  "thisAgentCancelledSameBookingBefore": "هذا الوكيل ألغى نفس هذا الحجز من قبل",
+  "gotIt": "فهمت",
+  "showAllAgents": "إظهار جميع الوكلاء",
+  "availableInSelectedLocation": "متاحين في الموقع المحدد",
+  "cancelledThisBookingOn": "ألغى هذا الحجز في",
+  "previouslyCancelledAgent": "وكيل ألغى سابقاً",
+  "agentPreviouslyCancelledWarning": "هذا الوكيل ألغى نفس طلب الحجز هذا سابقاً. يمكنك لا تزال تعيينه، لكن فكر في اختيار وكيل أكثر موثوقية.",
+  "busyAt": "مشغول في",
+  "checkingAvailability": "فحص توفر الوكلاء..."
 }
