--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,6 +11,8 @@
   "signOut": "Sign Out",
   "rejectOrder": "Reject Order",
   "areYouSureYouWantToRejectThisOrder": "Are you sure you want to reject this order?",
+  "checkingAvailability": "Checking agent availability...",
+  "loadingAgents": "Loading agents...",
   "reject": "Reject",
   "rejectingOrder": "Rejecting Order",
   "failedToRejectOrder": "Failed to reject order",
@@ -367,7 +369,7 @@
   "pleaseEnableLocationService":"Please enable location service",
   "ok":"OK",
   "locationPermissionDenied":"Location permission denied",
-  "bioMetricAuthentication":"Biometric authentication",
+  "bioMetricAuthentication":"Enable biometric",
   "confirmDeletion":"Confirm Deletion",
   "accountDeleted":"Account deleted",
   "startTracking":"Start Tracking",
@@ -504,5 +506,45 @@
   "errorStoppingBackgroundFetch": "Error stopping background fetch",
   "errorUpdatingBookingStatus": "Error updating booking status",
   "locationTrackingStopped": "Location tracking stopped",
-  "errorCheckingBatteryOptimization": "Error checking battery optimization"
+  "deleteItemConfirmation": "Are you sure you want to delete this item?",
+  "agentUnavailable":"Agent Unavailable",
+  "timeConflictDetected":"Time Conflict Detected",
+  "cannotAssignWorkTo":"Cannot assign work to",
+  "alreadyAssignedAtExactSameTime":"Already assigned at exact same time",
+  "currentBookingTime":"Current Booking Time",
+  "workerCannotBeAssignedMultipleTimes":"A worker cannot be assigned to multiple bookings at the exact same time. Please select a different time slot or choose another agent.",
+  "unknownWorker":"Unknown Worker",
+  "workerCancelled":"Worker Cancelled",
+  "cancelledByWorker":"Cancelled by worker",
+  "workerPreviouslyCancelled":"Worker Previously Cancelled",
+  "agentCancelledAtTimeSlot":"Agent cancelled at this time before",
+  "previouslyCancelledAt":"Previously cancelled at",
+  "chooseDifferentAgent":"Choose Different Agent",
+  "assignAnyway":"Assign Anyway",
+  "cancelledAt":"Cancelled at",
+  "workerCancelledAtTime":"This agent previously cancelled a booking at this exact time slot. Consider assigning to a different agent for better reliability.",
+  "errorCheckingBatteryOptimization": "Error checking battery optimization",
+  "workerRestrictedTitle":"Worker Restricted",
+  "cannotAssignCancelledWorker":"Cannot assign cancelled worker",
+  "lastCancellationOn":"Last cancellation on",
+  "workerCancelledRestrictionMessage":"This agent has previously cancelled a booking and is now restricted from new assignments. Please choose a different agent.",
+  "understood":"Understood",
+  "cancelledThisBooking":"Cancelled This Booking",
+  "alreadyBookedAt": "Already booked at",
+  "bookingAssignedTo": "Booking assigned to",
+  "bookingAssignmentSuccessful": "Booking assignment successful",
+  "anotherAssignmentInProgress": "Another assignment is in progress. Please wait...",
+  "assignmentInProgress": "Assignment in progress. Please wait...",
+  "checkingAvailabilityAndAssigning": "Checking availability and assigning...",
+  "thisBookingAlreadyAssignedToAnotherAgent": "This booking has already been assigned to another agent.",
+  "failedToAssignAgent": "Failed to assign agent. Please try again.",
+  "thisAgentCancelledSameBookingBefore": "This agent cancelled this same booking before",
+  "gotIt": "Got it",
+  "showAllAgents": "Show All Agents",
+  "availableInSelectedLocation": "available in selected location",
+  "cancelledThisBookingOn": "Cancelled this booking on",
+  "previouslyCancelledAgent": "Previously Cancelled Agent",
+  "agentPreviouslyCancelledWarning": "This agent previously cancelled this same booking request. You can still assign them, but consider choosing a more reliable agent.",
+  "busyAt": "Busy at",
+  "checkingAvailability": "Checking agent availability..."
 }
